--- a/content/03-app/02-connect-widgets-app/manifest.json
+++ b/content/03-app/02-connect-widgets-app/manifest.json
@@ -3,11 +3,15 @@
   "locale": "en_US",
   "platform": "4.1.2",
   "metadata": {
-    "appmode": "rmd-static",
+    "appmode": "quarto-static",
     "primary_rmd": "document.qmd",
     "primary_html": null,
     "content_category": null,
     "has_parameters": false
+  },
+  "quarto": {
+    "version": "0.9.80",
+    "engines": ["knitr"]
   },
   "packages": {
     "R6": {
@@ -1421,11 +1425,11 @@
     }
   },
   "files": {
-    "arrows.png": {
-      "checksum": "6919639929eee7172e22d343e8c1c264"
-    },
     "document.qmd": {
-      "checksum": "633ba0aead1bb5ef684c64a056b94b89"
+      "checksum": "ee16dc3d2bb8e928f73e3cce3dabec45"
+    },
+    "icon.drawio.png": {
+      "checksum": "3b9393d09d540d22bc6fb58f2d0d6bda"
     }
   },
   "users": null
