Upgraded vetiver to the latest version (0.1.5)

--- a/content/02-model/01-train-and-deploy-model/manifest.json
+++ b/content/02-model/01-train-and-deploy-model/manifest.json
@@ -4077,27 +4077,27 @@
       "description": {
         "Package": "vetiver",
         "Title": "Version, Share, Deploy, and Monitor Models",
-        "Version": "0.1.3",
+        "Version": "0.1.5",
         "Authors@R": "c(\n    person(\"Julia\", \"Silge\", , \"julia.silge@rstudio.com\", role = c(\"cre\", \"aut\"),\n           comment = c(ORCID = \"0000-0002-3671-836X\")),\n    person(\"RStudio\", role = c(\"cph\", \"fnd\"))\n  )",
         "Description": "The goal of 'vetiver' is to provide fluent tooling to\n    version, share, deploy, and monitor a trained model. Functions handle\n    both recording and checking the model's input data prototype, and\n    predicting from a remote API endpoint. The 'vetiver' package is\n    extensible, with generics that can support many kinds of models.",
         "License": "MIT + file LICENSE",
-        "URL": "https://vetiver.tidymodels.org/,\nhttps://github.com/tidymodels/vetiver",
-        "BugReports": "https://github.com/tidymodels/vetiver/issues",
+        "URL": "https://vetiver.rstudio.com, https://rstudio.github.io/vetiver-r/,\nhttps://github.com/rstudio/vetiver-r/",
+        "BugReports": "https://github.com/rstudio/vetiver-r/issues",
         "Depends": "R (>= 3.4)",
-        "Imports": "butcher, cli, curl, generics, glue, hardhat, httr, jsonlite,\nlifecycle, pins (>= 1.0.0), plumber (>= 1.0.0), purrr, rapidoc,\nreadr (>= 1.4.0), renv, rlang, tibble, vctrs, withr",
-        "Suggests": "caret, covr, knitr, LiblineaR, mlr3, mlr3learners, modeldata,\nparsnip, ranger, recipes, rmarkdown, rpart, rsconnect, testthat\n(>= 3.0.0), workflows, xgboost",
+        "Imports": "butcher, cli, fs, generics, glue, hardhat, httr, jsonlite,\nlifecycle, magrittr (>= 2.0.3), pins (>= 1.0.0), plumber (>=\n1.0.0), purrr, rapidoc, readr (>= 1.4.0), renv, rlang, tibble,\nvctrs, withr",
+        "Suggests": "callr, caret, covr, curl, dplyr, ggplot2, httpuv, knitr,\nLiblineaR, mlr3, mlr3learners, modeldata, parsnip, pingr,\nranger, recipes, rmarkdown, rpart, rsconnect, slider (>=\n0.2.2), testthat (>= 3.0.0), tidyselect, vdiffr, workflows,\nxgboost, yardstick",
         "VignetteBuilder": "knitr",
         "Config/Needs/website": "tidyverse/tidytemplate",
         "Config/testthat/edition": "3",
         "Encoding": "UTF-8",
-        "RoxygenNote": "7.1.2",
+        "RoxygenNote": "7.2.0",
         "NeedsCompilation": "no",
-        "Packaged": "2022-03-09 21:59:51 UTC; juliasilge",
+        "Packaged": "2022-05-25 19:37:45 UTC; juliasilge",
         "Author": "Julia Silge [cre, aut] (<https://orcid.org/0000-0002-3671-836X>),\n  RStudio [cph, fnd]",
         "Maintainer": "Julia Silge <julia.silge@rstudio.com>",
         "Repository": "RSPM",
-        "Date/Publication": "2022-03-09 22:20:02 UTC",
-        "Built": "R 4.1.0; ; 2022-03-10 10:55:40 UTC; unix"
+        "Date/Publication": "2022-05-25 20:00:02 UTC",
+        "Built": "R 4.1.0; ; 2022-05-26 10:53:29 UTC; unix"
       }
     },
     "viridisLite": {
