--- a/content/02-model/02-model-card/manifest.json
+++ b/content/02-model/02-model-card/manifest.json
@@ -4707,7 +4707,10 @@
   },
   "files": {
     "document.qmd": {
-      "checksum": "05897db6dc26678d4b6f7f9c4c758567"
+      "checksum": "1ecfa1b9e4908f385c200382741a117c"
+    },
+    "icon.drawio.png": {
+      "checksum": "48c279cd6cbab0dfb95492dbb6dad50e"
     }
   },
   "users": null
